--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "@types/react": "^18.0.0",
+    "@types/node": "^20.0.0"
   }
 }
