--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
-{
+// {
   "name": "lesson-generator",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "uuid": "9.0.0"
+    "@supabase/supabase-js": "^2.39.3",
+    "next": "14.1.0",
+    "openai": "^4.28.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-live": "^4.1.6"
   },
   "devDependencies": {
-    "typescript": "5.4.5",
-    "@types/react": "^18.0.0",
-    "@types/node": "^20.0.0"
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-live": "^2.1.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
